test/resources/parser/failing/testITE2.scala
object MissingCondParens {
  if true { 1 } else { 2 }
}